<resources>
    <string name="app_name">ProjectM</string>
    <string name="text_label_1">Settings</string>
    <string name="text_label_2">Chat</string>
    <string name="text_label_3">Networks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">Chat</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chat_disconnect_msg">You are not connected to any network. \n Connect to start chatting.</string>
    <string name="to_details">View network details</string>
    <string name="back_to_chat">Back to chat</string>
    <string name="network_description"></string>
    <string name="device_name">Your device</string>
    <string name="device_name_here">Device name here</string>
    <string name="network_name">Network name</string>
    <string name="current_networks">List of current networks</string>
    <string name="current_networks_header">Current networks</string>
    <string name="create_a_new_network">Create a new network</string>
    <string name="join_network">Join network</string>
    <string name="available_networks">List of available networks</string>
    <string name="available_networks_header">Available networks</string>
    <string name="select_network_to_chat">Select network to chat</string>
</resources>