<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layered_peaks_haikei__6_"
    android:orientation="vertical"
    tools:context=".Networks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/availableView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/available_networks"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="10sp"
        android:textSize="20sp" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/nodeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16sp"
                android:contentDescription="@string/available_networks"/>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10sp" >

            <Button
                android:id="@+id/joinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_style"
                android:text="@string/join_network"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/createNetworkButton"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary_bars_green"
                android:drawableLeft="@drawable/plus"
                android:text="@string/create_a_new_network"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/currentView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/current_networks"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:paddingTop="30sp"
                android:textSize="20sp" />

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/selectList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="16sp"
                    android:contentDescription="@string/current_networks"/>
            </ScrollView>

            <Button
                android:id="@+id/selectButton"
                android:layout_width="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttons"
                android:text="@string/select_network_to_chat"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>